añadido el contenido principal del codigo

--- a/index.html
+++ b/index.html
@@ -1,12 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mi Página Personal</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Hola</h1>
-    <p>Prueba</p>
+  <header>
+    <h1>¡Hola, soy Alex!</h1>
+    <p>Desarrollador web y amante de la tecnología 💻</p>
+  </header>
+
+  <nav>
+    <ul>
+      <li><a href="#sobre-mi">Sobre mí</a></li>
+      <li><a href="#proyectos">Proyectos</a></li>
+      <li><a href="#contacto">Contacto</a></li>
+    </ul>
+  </nav>
+
+  <section id="sobre-mi">
+    <h2>Sobre mí</h2>
+    <p>Me apasiona el diseño web y crear experiencias digitales atractivas y funcionales.</p>
+  </section>
+
+  <section id="proyectos">
+    <h2>Proyectos</h2>
+    <div class="card">
+      <h3>Mi Portafolio</h3>
+      <p>Una colección de mis mejores trabajos.</p>
+    </div>
+    <div class="card">
+      <h3>Blog de Tecnología</h3>
+      <p>Artículos sobre desarrollo, IA y más.</p>
+    </div>
+  </section>
+
+  <footer id="contacto">
+    <h2>Contacto</h2>
+    <p>Puedes escribirme a <a href="mailto:alex@email.com">alex@email.com</a></p>
+    <p>© 2025 Mi Página Personal</p>
+  </footer>
 </body>
 </html>
